[package]
name = "sharded_slab_lite"
version = "0.1.0"
authors = ["Vedran Maric <valinion@gmail.com>"]
edition = "2024"
# documentation = "https://docs.rs/sharded_slab_lite/"
# homepage = "https://github.com/vdrn/sharded_slab_lite"
# repository = "https://github.com/vdrn/sharded_slab_lite"
readme = "README.md"
rust-version = "1.85.0"
license = "MIT"
keywords = ["slab", "allocator", "lock-free", "atomic"]
categories = ["memory-management", "data-structures", "concurrency"]
description = """
A lock-free concurrent slab. Supports concurrent insertion, but not removal.
"""
exclude = [
    "flake.nix",
    "flake.lock",
    ".envrc",
    ".clog.toml",
    ".cargo",
    ".github",
    ".direnv",
    "bin",
]

[badges]
maintenance = { status = "experimental" }

[[bench]]
name = "bench"
harness = false

[dependencies]
lazy_static = "1"

[dev-dependencies]
proptest = "1"
criterion = "0.3"
slab = "0.4.2"
memory-stats = "1"
indexmap = "1" # newer versions lead to "candidate versions found which didn't match" on 1.42.0

[target.'cfg(loom)'.dependencies]
loom = { version = "0.5", features = ["checkpoint"], optional = true }

[target.'cfg(loom)'.dev-dependencies]
loom = { version = "0.5", features = ["checkpoint"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)', 'cfg(slab_print)'] }
